--- a/app/views/user_payment_cards/_form.html.erb
+++ b/app/views/user_payment_cards/_form.html.erb
@@ -1,9 +1,17 @@
-
 <%= render layout: "gray_box", locals: {title: "Legg til kredittkort", id: "credit-card"} do %>
+    <div data-controller="cardInputter"
+         data-card-registration-url="<%= @user_payment_card[:card_registration_url] %>"
+         data-card-preregistration-data="<%= @user_payment_card[:preregistration_data] %>"
+         data-card-access-key="<%= @user_payment_card[:access_key] %>"
+         data-card-vid="<%= @user_payment_card[:card_vid] %>"
+         data-card-client-id="plendit"
+         class="card-input">
 
-    <div data-controller="cardInputter">
-        <div data-card-holder></div>
-        <%= form_for UserPaymentCard.new, :html => { class: 'u-push-down' } do |f| %>
+        <div class="card-input__card-holder">
+            <div data-card-holder></div>
+        </div>
+
+        <form>
             <%- if not Rails.env.production? -%>
               <p>
                 <strong>
@@ -14,23 +22,13 @@
               </p>
             <%- end -%>
 
-            <%= hidden_field_tag :cardRegistrationUrl,   @user_payment_card[:card_registration_url] %>
-            <%= hidden_field_tag :preregistrationData,   @user_payment_card[:preregistration_data] %>
-            <%= hidden_field_tag :accessKey,             @user_payment_card[:access_key] %>
-            <%= hidden_field_tag :cardId,                @user_payment_card[:card_vid] %>
-            <%= hidden_field_tag :clientId,              :plendit %>
-
-            <%# the following fields + csfr needs to be posted to the form URL for card creation. %>
-            <%# card_vid == Id //// registration_data == RegistrationData %>
-            <%= hidden_field_tag :card_vid,              '' %>
-            <%= hidden_field_tag :registration_data,     '' %>
-
             <div class="row">
                 <div class="twelve columns">
                     <label for="number">Kortnummer:</label>
                     <input class="u-full-width" name="number" id="number" type="text">
                 </div>
             </div>
+
             <div class="row">
                 <div class="twelve columns">
                     <label for="name">Fullt navn:</label>
@@ -41,19 +39,27 @@
             <div class="row">
                 <div class="six columns">
                     <label for="expiry">Utløpsdato:</label>
-                    <input class="u-full-width" name="expiry" placeholder="<%= 1.year.from_now.strftime('%m/%y') %>" id="expiry" type="text">
+                    <input class="u-full-width" name="expiry" placeholder="04/16" id="expiry" type="text">
                 </div>
                 <div class="six columns">
                     <label for="cvc">Kontrollnummer:</label>
                     <input class="u-full-width" name="cvc" placeholder="123" id="cvc" type="text">
                 </div>
             </div>
+
             <div class="row">
                 <button type="submit" data-save-card class="u-pull-right button button-primary">Lagre kort</button>
                 <%= evil_icon 'ei-spinner-2', size: 'm', class: 'u-fill-green u-pull-right u-hidden' %>
             </div>
+
             <%= image_tag "logos/mangopay_powered_590x53.png", alt: "Powered by MangoPay", class: "", size: "270x26" %>
+        </form>
+
+        <%= form_for UserPaymentCard.new, data: { card_form: "" } do |f| %>
+            <%= f.hidden_field :card_vid, value: @user_payment_card[:card_vid] %>
+            <input type="hidden" name="user_payment_card[registration_data]" data-reg-data>
         <% end %>
+
     </div>
 
 <% end %>
