søk, not kategori

--- a/app/views/misc/_front_popular_box.html.erb
+++ b/app/views/misc/_front_popular_box.html.erb
@@ -10,7 +10,7 @@
     <div class="row">
         <div class="twelve columns front-popular-box">
             <div class="front-popular-box">
-                <h2 class="front-popular-box__title">Populære kategorier</h2>
+                <h2 class="front-popular-box__title">Populære søk</h2>
                 <div class="front-popular-box__row1">
                      <%= link_to (search_path q: topics[0][:term]), style: topics[0][:style], class: "front-popular-box__link" do %>
                          <span class="front-popular-box__link__title"><%= topics[0][:title] %></span>
