--- a/app/views/user_payment_cards/_form.html.erb
+++ b/app/views/user_payment_cards/_form.html.erb
@@ -49,7 +49,14 @@
 
             <div class="row">
                 <button type="submit" data-save-card class="u-pull-right button button-primary">Lagre kort</button>
-                <%= evil_icon 'ei-spinner-2', size: 'm', class: 'u-fill-green u-pull-right u-hidden' %>
+                <%= evil_icon  'ei-spinner-3', size: 'm', class: 'u-fill-blue u-pull-right u-hidden data-spinner', data: {spinner: ''} %>
+            </div>
+
+            <div class="row">
+                <div data-error class="u-hidden">
+                Noe gikk feil når vi prøvde å registrere kortet ditt!
+                Feilmeldingen var <code></code>.
+                </div>
             </div>
 
             <%= image_tag "logos/mangopay_powered_590x53.png", alt: "Powered by MangoPay", class: "", size: "270x26" %>
