--- a/app/views/user_payment_cards/new.html.erb
+++ b/app/views/user_payment_cards/new.html.erb
@@ -1,5 +1,4 @@
-<h1>New User Payment Card</h1>
-
+<%= render partial: "shared/personal_bar", locals: { selected: "Din profil" } %>
 <div class="container">
     <div class="row">
         <div class="eight columns">
@@ -8,6 +7,8 @@
         <div class="four columns"> &nbsp;
         </div>
     </div>
+    <div class="row">
+        <%= link_to 'Tilbake', user_payment_cards_path %>
+    </div>
 </div>
 
-<%= link_to 'Back', user_payment_cards_path %>
