--- a/app/views/ads/_form.html.erb
+++ b/app/views/ads/_form.html.erb
@@ -106,7 +106,7 @@
     <div class="u-push-down">
         <label>Beskrivelse</label>
         <%= f.text_area :body, class: 'u-full-width', data: { controller: 'autoSizeTextArea' } %>
-        <small>FIXME: Husk! Du kan bruke #hashtags i beskrivelse til å gjøre det enklere å finne denne annonse i en søk.</small>
+        <small>Viste du: Du kan bruke #hashtags i annonsen din. Det gjør det enklere å finne den i søket.</small>
     </div>
 
 <%- end -%>
