--- a/app/views/bookings/_form.html.erb
+++ b/app/views/bookings/_form.html.erb
@@ -11,23 +11,26 @@
         </div>
     <% end %>
 
-    <% if @booking.ad.ad_items.count == 1 %>
-        <%= f.label :ad_item_id %>
-        <%= @booking.ad.ad_items.first.id %>
+<!--
+    <%# if @booking.ad.ad_items.count == 1 %>
+        <%#= f.label :ad_item_id %>
+        <%#= @booking.ad.ad_items.first.id %>
         <%= f.hidden_field(:ad_item_id, :value => @booking.ad.ad_items.first.id )%>
-    <% else %>
+    <%# else %>
         <div class="field">
-            <%= f.label :ad_item_id %><br>
-            <%= f.collection_select(:ad_item_id, @booking.ad.ad_items.all, :id, :id) %>
+            <%#= f.label :ad_item_id %><br>
+            <%#= f.collection_select(:ad_item_id, @booking.ad.ad_items.all, :id, :id) %>
         </div>
-    <% end %>
-
+    <%# end %>
+ -->
+<!--
     <div class="field">
         <%= f.label :price %> <br>
         <%= number_to_currency_pretty @booking.ad.price %> per dag
     </div>
-
+ -->
     <%= render partial: "shared/booking_period_selector", locals: { form: f, ad: @booking.ad } %>
+
 
     <div class="actions">
         <%= f.submit class: "button button-primary" %>
