--- a/app/views/bookings/new.html.erb
+++ b/app/views/bookings/new.html.erb
@@ -5,9 +5,11 @@
         <div class="twelve columns">
             <%= render partial: "shared/ad_title_box", locals: { ad: @ad } %>
 
-            <h2>Leieforespørsel til <%= @ad.user.safe_display_name%></h2>
+            <h2>Leieforespørsel til <%= @ad.user.safe_display_name %><%#= @ad.user.decorate.display_name %></h2>
+            FIXME: Velg dato og tidspunkt at du ønsker å hente "item":
 
             <%= render 'form' %>
+
         </div>
     </div>
 </div>
