--- a/app/views/users/_edit_profile.html.erb
+++ b/app/views/users/_edit_profile.html.erb
@@ -142,7 +142,7 @@
                 </div>
             </div>
             <p>
-                <small>Vi trenger din addresse som er koblet til din bank konto nummer.</small>
+                <small>Vi trenger addressen som hører til bankkontoen din.</small>
             </p>
 
 
@@ -158,7 +158,7 @@
             </p>
         <%- else -%>
             <p>
-                <small>Når du har verifisert din epost og mobil telefon, da har du mulighet å konfigurere din bank konto nummer.</small>
+                <small>Når du har verifisert din epost og mobiltelefon, kan du å legge inn kontonummer.</small>
             </p>
         <%- end -%>
 
