dont mention insurance values in the frontpage

--- a/app/views/misc/frontpage.html.erb
+++ b/app/views/misc/frontpage.html.erb
@@ -42,14 +42,13 @@
     <div class="if-branding-section">
         <div class="if-branding-section__centerer">
             <%= image_tag "logos/if_150x148.png", size: "70x69", alt: "", class: "u-pull-left if-branding-section__logo" %>
-            <h2>Skadeforsikring fra IF opp til 1 million.</h2>
+            <h2>Skadeforsikring fra IF</h2>
             <p>
                 Slipp alle bekymringer. Hos plendit kan du velge å forsikre tingene
-                du leier ut. Ved skade har du som utleier ingen egenandel og verdien
-                av utleieobjektet dekkes opp til 1 million kroner.
+                du leier ut. Ved skade har du som utleier ingen egenandel eller bonustap.
             </p>
             <p>
-                <%= link_to 'Les mer om forsikring her.', Rails.configuration.x.customerservice.insurance_info %>
+                <%= link_to 'Les mer om forsikring', Rails.configuration.x.customerservice.insurance_info %>.
             </p>
         </div>
     </div>
