--- a/app/views/users/_verify_sms.html.erb
+++ b/app/views/users/_verify_sms.html.erb
@@ -1,4 +1,4 @@
-<%= render layout: "gray_box", locals: {title: "Verifiser Mobil", id: "verify-phone"} do %>
+<%= render layout: "gray_box", locals: {title: "Bekreft mobilnummer", id: "verify-phone"} do %>
     <%- if sms_notice -%>
         <%= sms_notice %>
     <%- end -%>
@@ -7,13 +7,13 @@
     <%= form_tag( verify_sms_users_path ) %>
         <div class="row">
             <div class="six columns">
-                <%= label_tag 'user[phone_number_confirmation_token]', "Telefon bekreftelses kode for #{@user.unconfirmed_phone_number}" %>
-                <%= text_field_tag 'user[phone_number_confirmation_token]', '', { class: "u-full-width", maxlength: "8" }  %>
+                <%= label_tag 'user[phone_number_confirmation_token]', "Kode fra SMS sendt til #{@user.unconfirmed_phone_number}" %>
+                <%= text_field_tag 'user[phone_number_confirmation_token]', '', { class: 'u-full-width', maxlength: 8 }  %>
             </div>
         </div>
         <div class="row">
             <div class="twelve columns">
-                <%= submit_tag "Bekreft", class: "u-pull-right button" %>
+                <%= submit_tag 'Bekreft', class: 'u-pull-right button' %>
             </div>
         </div>
     </form>
