prettify a little the location forms/views.

--- a/app/views/locations/_form.html.erb
+++ b/app/views/locations/_form.html.erb
@@ -28,7 +28,6 @@
     </div>
 
     <div class="actions">
-        <%= f.submit "Legg til sted" %>
+        <%= f.submit "Legg til sted", class: "button" %>
     </div>
-
 <% end %>
