--- a/app/views/locations/edit.html.erb
+++ b/app/views/locations/edit.html.erb
@@ -1,3 +1,10 @@
 <%= render partial: "shared/personal_bar", locals: {selected: "Din profil"} %>
 
-<%= render 'form' %>
+<div class="container">
+    <div class="row">
+        <div class="eight columns">
+            <h1 class="u-push-down">Rediger adresse</h1>
+            <%= render 'form' %>
+        </div>
+    </div>
+</div>
