--- a/app/assets/stylesheets/_search_result_item.scss
+++ b/app/assets/stylesheets/_search_result_item.scss
@@ -2,36 +2,40 @@
 
 .search-result-item {
     $two-column-break: 960px;
-    border-bottom: 1px solid $color-box-border;
 
     position: relative;
 
     @media screen and (min-width: $two-column-break) {
         width: 50%;
         display: inline-block;
-        height: 240px;
         overflow: hidden;
         float: left;
         border: none;
-        border-bottom: 1px solid white;
-
-        &:nth-child(even) {
-            border-right: 1px solid white;
-        }
     }
 
-    @media screen and (min-width: $two-column-break * 1.5) {
-        height: 340px;
+    &__title {
+        font-size: 120%;
+        padding: 12px;
+        margin: 0;
     }
 
     &__link {
+        background-color: white;
         text-decoration: none;
         color: black;
+        display: inline-block;
+        padding: $standard-spacing / 2;
+        width: 100%;
+    }
+
+    &__image-holder {
+        padding-bottom: (100% / 3) * 2 ;
     }
 
     &__image {
         width: 100%;
         height: auto;
+        float: left;
     }
 
     &__price-floater {
@@ -41,7 +45,7 @@
         right: 0;
         min-width: 100px;
         height: 46px;
-        box-shadow: -3px 3px 5px 0px rgba(0,0,0,0.75);
+        box-shadow: $subtle-shadow;
         color: white;
         background-color: $color-plendit-blue;
         font-size: 16px;
@@ -50,33 +54,4 @@
         padding-left: 8px;
         padding-right: 8px;
     }
-
-    &__text-container {
-        padding: $standard-spacing / 3;
-        padding-top: 0;
-        width: 64%;
-        position: absolute;
-        bottom: 0;
-        background-color: rgba(white, 0.6)
-    }
-
-    &__profile {
-        position: absolute;
-        width: 36%;
-        bottom: 0;
-        right: 0;
-        height: 125px;
-        text-align: center;        
-    }
-
-    &__title {
-        font-weight: bold;
-        margin-bottom: 0;
-    }
-
-    &__body {
-        display: none;
-        margin-bottom: 0;
-    }
-
 }
