Cleaned up hit count box and changed filter toggle to be a button

--- a/app/assets/stylesheets/_search.scss
+++ b/app/assets/stylesheets/_search.scss
@@ -55,11 +55,7 @@
 
 
 .search-title-box {
-    padding: $standard-spacing / 4;
-
-    &__title {
-        margin: 0;
-    }
+    text-align: center;
 }
 
 
