--- a/app/views/ads/search.html.erb
+++ b/app/views/ads/search.html.erb
@@ -6,7 +6,7 @@
     </div>
     <div class="result-container__hits-box">
         <div class="container search-title-box">
-            <h4 class="search-title-box__title" data-controller="hitCount">Viser <%= @ads.count %> av <%= @ads.total_count %> treff for <i><%= @term %></i></h4>
+            <h4 data-controller="hitCount">Viser <%= @ads.count %> av <%= @ads.total_count %> treff for <i><%= @term %></i></h4>
         </div>
         <%= render partial: "search_filter_section" %>
         <div data-controller="resultList resultPaging" data-result-list>
