--- a/app/views/kaminari/_next_page.html.erb
+++ b/app/views/kaminari/_next_page.html.erb
@@ -6,6 +6,10 @@
     per_page:      number of items to fetch per page
     remote:        data-remote
 -%>
-<span class="pagination__next">
-  <%= link_to_unless current_page.last?, t('views.pagination.next').html_safe, url, rel: 'next', remote: remote, data: { link_page: current_page.number + 1 } %>
-</span>
+<li>
+    <% if current_page.last? %>
+            <span class="pagination__next pagination__disabled"><%= t('views.pagination.next').html_safe %></span>
+    <% else %>
+        <%= link_to t('views.pagination.next').html_safe, url, rel: 'next', remote: remote, data: { link_page: current_page.number + 1 }, class: "pagination__next" %>
+    <% end %>
+</li>
