--- a/app/assets/stylesheets/_search.scss
+++ b/app/assets/stylesheets/_search.scss
@@ -161,3 +161,30 @@ $breakpoint: 550px;
         margin-bottom: 0;
     }
 }
+
+
+.pagination {
+    li {
+        display: inline-block;
+    }
+
+    a, span {
+        border: 1px solid #e6e6e6;
+        border-radius: 0.25em;
+        padding: .6em .8em;
+        text-decoration: none;
+    }
+
+    &__next::after {
+        content: ' \00bb';
+    }
+
+    &__prev::before {
+        content: '\00ab ';
+    }
+
+    &__disabled {
+        color: gray;
+    }
+
+}
