--- a/app/views/kaminari/_gap.html.erb
+++ b/app/views/kaminari/_gap.html.erb
@@ -5,4 +5,4 @@
     per_page:      number of items to fetch per page
     remote:        data-remote
 -%>
-<span class="pagination__gap"><%= t('views.pagination.truncate').html_safe %></span>
+<li class="pagination__gap"><span><%= t('views.pagination.truncate').html_safe %></span></li>
