--- a/app/views/kaminari/_page.html.erb
+++ b/app/views/kaminari/_page.html.erb
@@ -7,6 +7,10 @@
     per_page:      number of items to fetch per page
     remote:        data-remote
 -%>
-<span class="pagination__page<%= ' pagination__page--current' if page.current? %>">
-  <%= link_to_unless page.current?, page, url, {remote: remote, rel: page.next? ? 'next' : page.prev? ? 'prev' : nil, data: {link_page: page.number}} %>
-</span>
+<li class="pagination__page<%= ' pagination__page--current' if page.current? %>">
+    <% if page.current? %>
+        <span><%= page.number %></span>
+    <% else %>
+        <%= link_to page, url, {remote: remote, rel: page.next? ? 'next' : page.prev? ? 'prev' : nil, data: {link_page: page.number}} %>
+    <% end %>
+</li>
