--- a/app/views/kaminari/_prev_page.html.erb
+++ b/app/views/kaminari/_prev_page.html.erb
@@ -6,6 +6,10 @@
     per_page:      number of items to fetch per page
     remote:        data-remote
 -%>
-<span class="pagination__prev">
-  <%= link_to_unless current_page.first?, t('views.pagination.previous').html_safe, url, rel: 'prev', :remote => remote, data: {link_page: current_page.number - 1} %>
-</span>
+<li>
+    <% if current_page.first? %>
+        <span class="pagination__prev pagination__disabled"><%= t('views.pagination.previous').html_safe %></span>
+    <% else %>
+        <%= link_to t('views.pagination.previous').html_safe, url, rel: 'prev', :remote => remote, data: {link_page: current_page.number - 1}, class: "pagination__prev" %>
+    <% end %>
+</li>
