--- a/app/assets/stylesheets/_constants.scss
+++ b/app/assets/stylesheets/_constants.scss
@@ -10,6 +10,7 @@ $color-gray-text: #454649;
 
 $color-gray-background: #d4d4d4; // rgb(212,212,212);
 $color-subtle-gray-background: #e5e7e5;
+$color-skeleton-input-border: #d1d1d1;
 
 $color-button-delete: #be0027;
 $color-button-good: #36b984;
