--- a/app/assets/stylesheets/_search.scss
+++ b/app/assets/stylesheets/_search.scss
@@ -166,7 +166,7 @@ $breakpoint: 550px;
     }
 
     a, span {
-        border: 1px solid #e6e6e6;
+        border: 1px solid $color-skeleton-input-border;
         border-radius: 0.25em;
         padding: .6em .8em;
         text-decoration: none;
