Made the 'no hits' box a bit prettier

--- a/app/assets/stylesheets/_search.scss
+++ b/app/assets/stylesheets/_search.scss
@@ -188,6 +188,11 @@ $breakpoint: 550px;
 
 .search-result-box {
 
+    &__no-hits-box {
+        padding: $standard-spacing;
+        background-color: white;
+    }
+
     &__paging-holder {
         text-align: center;
         background-color: white;
